src/objects/Benfit_Request_Form__c.object
<CustomObject>
    <fields>
        <fullName>Specific_Stop_Loss_Options__c</fullName>
        <label>Specific Stop Loss Options</label>
        <picklist>
            <controllingField>Jurisdiction__c</controllingField>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$20,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$22,500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$25,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$30,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$40,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$45,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$50,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$55,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$60,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$65,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$70,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$75,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$80,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$85,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$90,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$95,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$100,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$105,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$110,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$115,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$120,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$125,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$130,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$135,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$140,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$145,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$150,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$155,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$160,000</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Standard_Network__c</fullName>
        <label>Standard Network</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No - Requires Approval</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>Opportunity__r.Account.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Benefit Request Form Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stop_Loss_Contract_Period__c</fullName>
        <label>Stop Loss Contract Period</label>
        <picklist>
            <picklistValues>
                <fullName>Incurred in 12 Paid in 12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incurred in 12 Paid in 15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incurred in 12 Paid in 18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incurred in 12 Paid in 24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incurred in 15 Paid in 12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incurred in 18 Paid in 12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incurred in 24 Paid in 12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid in 12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interpolating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extrapolating</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stop_Loss__c</fullName>
        <label>Stop Loss</label>
        <picklist>
            <picklistValues>
                <fullName>CareFirst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preferred - HM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preferred - Symetra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Preferred</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submit_to_ARC_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submit to ARC Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Submit_to_Underwriting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submit to Underwriting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tiers__c</fullName>
        <label>Tiers</label>
        <picklist>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Valid_Cede_Document_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Cede Document Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verification_Date__c</fullName>
        <label>Verification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Verified_By__c</fullName>
        <label>Verified By</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Who_Marks_Sold__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Who_Marks_Sold</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Benefit_Request_Forms1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zip_Code_Validation__c</fullName>
        <label>Zip Code Validation</label>
        <picklist>
            <picklistValues>
                <fullName>Within the CareFirst service area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outside CareFirst Service Area - Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outside CareFirst Service Area - Request Cede</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Benefit Request Form</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Funding_Arrangements__c</columns>
        <columns>Submit_to_ARC_Approval__c</columns>
        <columns>Submit_to_Underwriting__c</columns>
        <columns>Count_of_Proposed_Products__c</columns>
        <columns>Count_of_Medical_Proposed_Products__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Underwriting</fullName>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>NAME</columns>
        <columns>Benefit_Effective_Date__c</columns>
        <columns>Funding_Arrangements__c</columns>
        <columns>Status__c</columns>
        <columns>MHP_Required__c</columns>
        <columns>MHP_Test_Result__c</columns>
        <columns>ARC_Approval_Required__c</columns>
        <columns>ARC_Approval_Status__c</columns>
        <columns>Submit_to_Underwriting__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Submit_to_Underwriting__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>Underwriting</label>
    </listViews>
    <nameField>
        <displayFormat>BRF-{000000}</displayFormat>
        <label>Benefit Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Benefit Request Forms</pluralLabel>
    <recordTypes>
        <fullName>ASO</fullName>
        <active>true</active>
        <description>ASO Layout</description>
        <label>ASO</label>
    </recordTypes>
    <recordTypes>
        <fullName>Both</fullName>
        <active>true</active>
        <description>Both Layout</description>
        <label>Both</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other</fullName>
        <active>true</active>
        <description>Other Layout</description>
        <label>Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>Risk</fullName>
        <active>true</active>
        <description>Risk Layout</description>
        <label>Risk</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>EBRF001</fullName>
        <active>true</active>
        <description>For &quot;Other&quot; Enrollment Option user should manually enter Other Enrollment Options</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; (IF( 
AND( 
TEXT(  Enrollment_Option__c  ) = &quot;Other&quot;, 
ISBLANK(  Other_Enrollment_Option__c  )), True, False 
))</errorConditionFormula>
        <errorDisplayField>Other_Enrollment_Option__c</errorDisplayField>
        <errorMessage>EBRF001: If Enrollment Option = &quot;Other&quot; then Other Enrollment Option field cannot be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EBRF002</fullName>
        <active>true</active>
        <description>For &quot;Other&quot; Funding Arragnements user should manually enter Other Funding Arrangements</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; (IF( 
AND( 
TEXT(  Funding_Arrangements__c ) = &quot;Other&quot;, 
ISBLANK( Other_Funding_Arrangements__c  )), True, False 
))</errorConditionFormula>
        <errorDisplayField>Other_Funding_Arrangements__c</errorDisplayField>
        <errorMessage>EBRF002 : If Funding Arrangements = &quot;Other&quot; then Other Funding Arrangements field cannot be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EBRF003</fullName>
        <active>true</active>
        <description>For Non-standard Contract period user should manually enter the number of months which should not exceed more than 36 months</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; (IF( TEXT( Contract_Period__c ) =&apos;Non-Standard&apos; &amp;&amp;  ISBLANK(Number_of_Months_for_Contract_Period__c),true,IF(TEXT( Contract_Period__c ) =&apos;Non-Standard&apos; &amp;&amp; Number_of_Months_for_Contract_Period__c &gt; 36,true,false )))</errorConditionFormula>
        <errorDisplayField>Number_of_Months_for_Contract_Period__c</errorDisplayField>
        <errorMessage>EBRF003 : If Contact Period = &quot;Non-standard&quot; then number of months for contract period should cannot be blank and the value should be less than 36 months</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EBRF004</fullName>
        <active>true</active>
        <description>If Enrollment Option is &quot;eExchange&quot; then enrollment vendor field should not be blank</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; ((AND(ISPICKVAL(  Enrollment_Option__c  , &quot;eExchange&quot;) &amp;&amp; 
ISBLANK(  Enrollment_Vendor__c  ))))</errorConditionFormula>
        <errorDisplayField>Enrollment_Vendor__c</errorDisplayField>
        <errorMessage>EBRF004 : For Enrollment Option is &quot;eExchange&quot; then enrollment vendor field cannot be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EBRF005</fullName>
        <active>true</active>
        <description>If MHP Required is true and MHP Test Result is &quot;Fail&quot; or &quot;Pending&quot; and &quot;Submit to Underwriting&quot; = true, then prevent saving record</description>
        <errorConditionFormula>AND(MHP_Required__c == &apos;Yes&apos; , MHP_Test_Result__c == &quot;Fail&quot; || MHP_Test_Result__c == &quot;Pending&quot;,Submit_to_Underwriting__c == True == True)</errorConditionFormula>
        <errorMessage>EBRF005: If MHP Required is true and MHP Test Result is &quot;Fail&quot; or &quot;Pending&quot; then cannot Submit to Underwriting.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EBRF006</fullName>
        <active>true</active>
        <description>EBRF006: Cannot Submit to Underwriting if MHP Required is blank</description>
        <errorConditionFormula>AND(MHP_Required__c == null ,  Submit_to_Underwriting__c  == True)</errorConditionFormula>
        <errorMessage>EBRF006: Cannot Submit to Underwriting if MHP Required is blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EBRF007</fullName>
        <active>true</active>
        <description>Benefit Request Form: if Account Legal Name Verified = false on the related Opportunity, then User cannot save the record</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; (AND( Opportunity__r.Legal_Account_Name_Verified__c == false))</errorConditionFormula>
        <errorMessage>EBRF007:Cannot Verify Account Legal Name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EBRF008</fullName>
        <active>true</active>
        <description>If Religious Exemption is ture then user cannot select a value for Religious Accommodation</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; (IF(  Exemption__c   = true,IF(ISBLANK(TEXT( Accommodation__c )),false,true),false))</errorConditionFormula>
        <errorDisplayField>Accommodation__c</errorDisplayField>
        <errorMessage>EBRF008 : If Religious Exemption value is true then user cannot select a value for Religious Accommodation. Please check the Religious Exemption value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EBRF009</fullName>
        <active>true</active>
        <description>To defer MHP Test Result to Actuarial Team</description>
        <errorConditionFormula>AND(MHP_Required__c != &apos;Yes&apos; , Send_to_Actuarial_Team__c == True)</errorConditionFormula>
        <errorMessage>EBRF009: Cannot Send To Actuarial Team if MHP Required is not Yes.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EBRF010</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( Submit_to_Underwriting__c ,  NOT(ISCHANGED(Status__c)))</errorConditionFormula>
        <errorMessage>EBRF010: You cannot edit BRF fields after it is sent to underwriting</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EBRF011</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( Submit_to_ARC_Approval__c ,  NOT(OR(ISCHANGED(Status__c),ISCHANGED(Submit_to_Underwriting__c))))</errorConditionFormula>
        <errorMessage>EBRF011:  You cannot edit a BRF when an ARC Approval Required BRF has been submitted for ARC approval</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EBRF012</fullName>
        <active>true</active>
        <description>if &quot;ARC Approval Required&quot; = Yes and &quot;ARC Approval Status&quot; &lt;&gt; &quot;Approved by Committee&quot; and &quot;Submit to Underwriting&quot; = true, then prevent saving record</description>
        <errorConditionFormula>AND(ARC_Approval_Required__c = True , 	
(NOT(ISPICKVAL(ARC_Approval_Status__c, &quot;Approved by Committee&quot;))) , Submit_to_Underwriting__c == True)</errorConditionFormula>
        <errorMessage>EBRF012: If ARC Approval Required = Yes and ARC Approval Status is not &quot;Approved by Committee&quot; then cannot Submit to Underwriting.</errorMessage>
    </validationRules>
</CustomObject>